<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poker Randomizer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="desc">Card Back</string>
    <string name="player1">You</string>
    <string name="player2">Player 2</string>
    <string name="nexthand">Next Hand</string>
    <string name="flop">Flop</string>
    <string name="turn">Turn</string>
    <string name="river">River</string>
    <string name="statistics">Statistics</string>
    <string name="statistic_title">Statistics</string>
    <string name="high_card">High Card</string>
    <string name="pair">Pair</string>
    <string name="double_pair">Double Pair</string>
    <string name="triple">Triple</string>
    <string name="straight">Straight</string>
    <string name="full">Full</string>
    <string name="poker">Poker</string>
    <string name="two_players"> 2 Players</string>
    <string name="three_players"> 3 Players</string>
	<string name="four_players"> 4 Players</string>
	<string name="choose_number_player">Choose the number of players</string>
</resources>
