<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="left"
    android:orientation="vertical"
    tools:context="com.example.poker_randomizer.MainActivity" >

    <LinearLayout
        android:id="@+id/centralpanel"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp" >

        <TextView
            android:id="@+id/board3_number_hands_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/centralpanel"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <ImageView
            android:id="@+id/image_card1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/image_card2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/image_card3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/image_card4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/image_card5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:src="@drawable/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/board3_image_card1_player1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/back" />

                    <ImageView
                        android:id="@+id/board3_image_card2_player1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="20dp"
                        android:layout_toLeftOf="@+id/board3_image_card1_player1"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/back" />
                </LinearLayout>

                <RadioButton
                    android:id="@+id/board3_radio_player1"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_below="@+id/board3_image_card1_player1"
                    android:layout_gravity="left"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/desc"
                    android:text="@string/player1"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <ImageView
                    android:id="@+id/board3_image_card1_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/back" />

                <ImageView
                    android:id="@+id/board3_image_card2_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/board3_image_card1_player2"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/back" />

                <RadioButton
                    android:id="@+id/board3_radio_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/board3_image_card1_player2"
                    android:layout_below="@+id/board3_image_card2_player2"
                    android:layout_gravity="right"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/desc"
                    android:gravity="center_vertical"
                    android:text="@string/player1"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <ImageView
                    android:id="@+id/board3_image_card1_player3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/back" />

                <ImageView
                    android:id="@+id/board3_image_card2_player3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/board3_image_card1_player3"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/back" />

                <RadioButton
                    android:id="@+id/board3_radio_player3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/board3_image_card2_player3"
                    android:layout_gravity="right"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/desc"
                    android:gravity="center_vertical"
                    android:text="@string/player1"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <ImageView
                    android:id="@+id/board3_image_card1_player4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/back" />

                <ImageView
                    android:id="@+id/board3_image_card2_player4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/board3_image_card1_player4"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/back" />

                <RadioButton
                    android:id="@+id/board3_radio_player4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/board3_image_card2_player4"
                    android:layout_gravity="right"
                    android:layout_marginRight="2dp"
                    android:contentDescription="@string/desc"
                    android:gravity="center_vertical"
                    android:text="@string/player1"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/panel_button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/board3_btn_flop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_flop"
                android:text="@string/flop"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/board3_btn_turn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_flop"
                android:text="@string/turn"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/board3_btn_river"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_flop"
                android:text="@string/river"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/panel_button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/board3_btn_next_hand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nexthand"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>